--- a/verk6/styles.scss
+++ b/verk6/styles.scss
@@ -1,3 +1,9 @@
+
+
+@import url(./styles/reset);
+@import url(./styles/base);
+@import url(./styles/config);
+
 /* Setjum inn „reset“ sem fjarlægir margin og padding af öllu */
 * {
     margin: 0;
@@ -331,6 +337,8 @@
   
   /** Cards **/
   
+
+
   .cards {
     display: grid;
     grid-template-rows: auto;
@@ -362,19 +370,8 @@
   }
   
   /** Card **/
-  
-  .card {
-    display: flex;
-    flex-direction: column;
-  
-    width: 100%;
-  }
-  
-  @media (min-width: 700px) {
-    .card {
-      grid-column: span 5;
-    }
-  }
+
+  @import url(./styles/card.scss);
   
   .card > .image {
     width: 100%;
